Fix style of Tabs to not show random scrollbar (#86)

--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -8,7 +8,6 @@
   box-shadow: shadow();
 
   white-space: nowrap;
-  overflow-x: scroll;
 }
 
 .connectBelow {
